--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header>
             <div class="top-header">
                 
-                <div class="container-xxl">
+                <div>
                     <div class="left">
                         <div>
                             <span>빌딩풍 위험도 분석 및 예방·대응 시스템</span>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container-xxl" >
+                    <div>
                         <ul class="navbar-nav">
                             <li class="nav-item ">
                                 <a class="nav-link  text-white" href="javascript:void(0)" data-toggle="off" data-bs-toggle="modal" data-bs-target="#menu01Modal">
