--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
                 <div id="map" ></div>
             </section>
         </main>
-        <footer>
 
+
+
+        <footer>
+            <input type="text"  class="popUpCloseResult" />
         </footer>
 
     </div>
