--- a/menu06.html
+++ b/menu06.html
@@ -66,6 +66,11 @@
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
 
    <!-- JS -->
-   <script src="js/common.js"></script>
+   <script>
+    // 팝업창 종료 전달
+    window.addEventListener('unload',function(){
+        opener.postMessage("06", '*');
+    })
+</script>
 </body>
 </html>
