--- a/menu06.html
+++ b/menu06.html
@@ -28,6 +28,8 @@
 
     <!-- COMMON CSS -->
     <link rel="stylesheet" href="css/common.css">
+    <!-- MENU06 CSS -->
+    <link rel="stylesheet" href="css/menu06.css">
 </head>
 <body>
         
@@ -35,7 +37,7 @@
     <div class="wrapper">
         <header>
             <div class="top-header">
-                <h1>MENU06</h1>
+               
             </div>
             <nav>
 
