--- a/index.html
+++ b/index.html
@@ -158,6 +158,21 @@
                                     <label for="left-location03" class="form-check-label">테스트3</label>
                                 </div>                                
                             </div>
+                            <div class="center">
+                           
+                                <div  style="display:flex;justify-content: left;align-items: center;padding:5px;font-size:1rem;margin-bottom:5px;">
+                                    <input type="checkbox" name="" class="" id="center-location01"  class="form-check-input" style="width:20px;" />&nbsp;
+                                    <label for="center-location01" class="form-check-label">테스트1</label>
+                                </div>
+                                <div style="display:flex;justify-content: left;align-items: center;padding:5px;font-size:1rem;margin-bottom:5px;">
+                                    <input type="checkbox" name="" class="" id="center-location02"  class="form-check-input" style="width:20px;" />&nbsp;
+                                    <label for="center-location02" class="form-check-label">테스트2</label>
+                                </div>
+                                <div style="display:flex;justify-content: center;align-items: center;padding:5px;font-size:1rem;margin-bottom:5px;">
+                                    <input type="checkbox" name="" class="" id="left-location03"  class="form-check-input" style="width:20px;" />&nbsp;
+                                    <label for="center-location03" class="form-check-label">테스트3</label>
+                                </div>                                
+                            </div>
                             <div class="right">
                                 <div style="display:flex;justify-content: left;align-items: center;padding:5px;font-size:1rem;margin-bottom:5px;">
                                     <input type="checkbox" name="" class="" id="right-location01"  class="form-check-input" style="width:20px;" />&nbsp;
@@ -175,7 +190,7 @@
                             </div>
                         </div>
                         <div class="footer">
-                            gg
+                            FOOTER
                         </div>
 
                 </div>
