--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
         .wrapper>main{}
         .wrapper>main>section{
             width:100vw;
-            height:400px;
+            height:350px;
             position:relative;
             top:300px;
         }
@@ -88,7 +88,7 @@
             position:relative;
             z-index:2;
             width:300px;
-            height:400px;
+            height:350px;
             padding : 20px;
             border : 1px solud gray;
             margin : -200px auto;
@@ -235,11 +235,12 @@
                 <!-- ID 로그인 -->
                  <div class="id_login_block">
                      <div class="header" style="text-align:center;">
-                        <div>
-                            <h2>TITLE</h2>
+                        <div style="position:relative;">
+                            <div style="position:absolute;left:10px;top:-10px;font-size:0.7rem;border : 1px solid #2A76C7;color : #2A76C7;width:20px;height:20px;opacity: 0.5;">L</div>
                         </div>
-                        <div>
-                            <span class="material-symbols-outlined" style="font-size:6rem;color:#2A76C7;">account_circle</span>
+                        <div style="position:relative;">
+                            <span class="material-symbols-outlined" style="position:absolute;font-size:2rem;color:#2A76C7;">air</span>
+                            <span class="material-symbols-outlined" style="font-size:6rem;color:#2A76C7;">apartment</span>
                         </div>
                      </div>
                      <div class="body">    
