--- a/login.html
+++ b/login.html
@@ -236,7 +236,7 @@
                  <div class="id_login_block">
                      <div class="header" style="text-align:center;">
                         <div style="position:relative;">
-                            <div style="position:absolute;left:10px;top:-10px;font-size:0.7rem;border : 1px solid #2A76C7;color : #2A76C7;width:20px;height:20px;opacity: 0.5;">L</div>
+                            <div style="position:absolute;left:10px;top:-10px;font-size:0.7rem;border : 1px solid #2A76C7;color : #2A76C7;width:20px;height:20px;opacity: 0.5;">H</div>
                         </div>
                         <div style="position:relative;">
                             <span class="material-symbols-outlined" style="position:absolute;font-size:2rem;color:#2A76C7;">air</span>
