--- a/index.html
+++ b/index.html
@@ -72,21 +72,9 @@
                                 </a>
                             </li>
                             <li class="nav-item  ms-3">
-                                <a class="nav-link  text-white" href="javascript:void(0)" data-toggle="off" data-submenu="menu02"  data-idx="2">
-                                    <img src="images/icon3_off.png"  alt="" />
-                                    <div class="title">관측 지점 정보</div>
-                                </a>
-                            </li>
-                            <li class="nav-item  ms-3">
-                                <a class="nav-link  text-white" href="javascript:void(0)"  data-toggle="off" data-submenu="menu03"  data-idx="3">
-                                    <img src="images/icon4_off.png"  alt="" />
-                                    <div class="title">관측 풍속 정보</div>
-                                </a>
-                            </li>
-                            <li class="nav-item  ms-3">
-                                <a class="nav-link  text-white" href="javascript:void(0)"  data-toggle="off"  data-submenu="menu04"  data-idx="4">
-                                    <img src="images/icon12_off.png"  alt="" />
-                                    <div class="title">ASOS 풍속 정보</div>
+                                <a class="nav-link  text-white" href="javascript:void(0)"  data-toggle="off" data-submenu="menu06"  data-idx="6">
+                                    <img src="images/test2_off.png"  alt="" />
+                                    <div class="title">실시간 풍속정보</div>
                                 </a>
                             </li>
                             <li class="nav-item  ms-3">
@@ -95,12 +83,27 @@
                                     <div class="title">빌딩품 위험지도</div>
                                 </a>
                             </li>
+
                             <li class="nav-item  ms-3">
-                                <a class="nav-link  text-white" href="javascript:void(0)"  data-toggle="off" data-submenu="menu06"  data-idx="6">
-                                    <img src="images/test2_off.png"  alt="" />
-                                    <div class="title">실시간 풍속정보</div>
+                                <a class="nav-link  text-white" href="javascript:void(0)" data-toggle="off" data-submenu="menu02"  data-idx="2">
+                                    <img src="images/icon3_off.png"  alt="" />
+                                    <div class="title">행동요령</div>
                                 </a>
                             </li>
+                            <li class="nav-item  ms-3">
+                                <a class="nav-link  text-white" href="javascript:void(0)"  data-toggle="off" data-submenu="menu03"  data-idx="3">
+                                    <img src="images/icon4_off.png"  alt="" />
+                                    <div class="title">부산시 침수통합관리 시스템</div>
+                                </a>
+                            </li>
+                            <li class="nav-item  ms-3">
+                                <a class="nav-link  text-white" href="javascript:void(0)"  data-toggle="off"  data-submenu="menu04"  data-idx="4">
+                                    <img src="images/icon12_off.png"  alt="" />
+                                    <div class="title">XXXX</div>
+                                </a>
+                            </li>
+
+
                         </ul>
                     </div>
                 </nav>
