--- a/menu06.html
+++ b/menu06.html
@@ -96,6 +96,15 @@
    <!-- CHARTJS -->
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+   <!-- HIGHCHART-->
+   <script src="https://code.highcharts.com/highcharts.js"></script>
+   <script src="https://code.highcharts.com/highcharts-more.js"></script>
+   <script src="https://code.highcharts.com/modules/data.js"></script>
+   <script src="https://code.highcharts.com/modules/exporting.js"></script>
+   <script src="https://code.highcharts.com/modules/export-data.js"></script>
+   <script src="https://code.highcharts.com/modules/accessibility.js">
+
+
    <!-- MENU06 JS -->
    <script src="js/menu06.js"></script>
 
