--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                             <li class="nav-item  ms-3">
                                 <a
                                     class="nav-link  text-white"
-                                    href="javascript:void(0)"
+                                    href="https://safecity.busan.go.kr/#/"
+                                    target="_blank"
                                     data-toggle="off"
                                     data-submenu="menu03"
                                     data-idx="3">
