--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <section class="section01">
                     <!-- 빌딩풍 -->
 
-                    <video controls="controls" autoplay="autoplay" muted="muted">
+                    <video controls="controls" autoplay="autoplay" muted="muted"  loop>
                         <source src="video/section01_bg.mp4" type="video/mp4">
                     </video>
 
@@ -187,6 +187,10 @@
                 <section class="section02 ">
                     <!-- -->
                     <h1>TEST02</h1>
+
+
+
+
                 </section>
 
                 <section class="section03 ">
