--- a/menu06.html
+++ b/menu06.html
@@ -105,16 +105,16 @@
    <script src="https://code.highcharts.com/modules/accessibility.js">
 
 
-   <!-- MENU06 JS -->
-   <script src="js/menu06.js"></script>
+//    <!-- MENU06 JS -->
+//    <script src="js/menu06.js"></script>
 
-   <!-- JS -->
-   <script>
-    // 팝업창 종료 전달
-    window.addEventListener('unload',function(){
-        opener.postMessage("06", '*');
-    })
-</script>
+//    <!-- JS -->
+
+//     // 팝업창 종료 전달
+//     window.addEventListener('unload',function(){
+//         opener.postMessage("06", '*');
+//     })
+// </script>
 
 
 <script>
