--- a/index.html
+++ b/index.html
@@ -179,19 +179,21 @@
                                 <div><a href="javascript:void(0)" class="main-banner-btn" data-bs-toggle="modal" data-bs-target="#exampleModal4"><span class="material-symbols-outlined">play_arrow</span></a></div>
                                 <div><a href="javascript:void(0)" class="main-banner-btn" data-bs-toggle="modal" data-bs-target="#exampleModal3"><span class="material-symbols-outlined naver">play_arrow</span></a></div>
                                 <div><a href="javascript:void(0)" class="main-banner-btn" data-bs-toggle="modal" data-bs-target="#exampleModal1"><span class="material-symbols-outlined">play_arrow</span></a>
-                                </div>
+                            </div>
                         </div>                      
                     </div>
                 </section>
 
-                <section class="section02 ">
+                <section class="section06">
                     <!-- -->
-                    <h1>TEST02</h1>
+                    <div class="left">
 
-
-
-
+                    </div>
+                    <div class="right">
+                    
+                    </div>        
                 </section>
+
 
                 <section class="section03 ">
                     <!-- 빌딩풍 위험지도 -->
