--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <link rel="stylesheet" href="css/common.css">
 
         <!-- mobile -->
-        <link rel="stylesheet" href="css/mobile.css" media="all and (max-width:480px)">
+        <link rel="stylesheet" href="css/mobile.css" media="all and (max-width:380px)">
 
     </head>
     <body>
@@ -102,7 +102,7 @@
                                     data-idx="6">
                                     <!-- <img src="images/test2_off.png" alt="" /> -->
 
-                                    <div class="title" style="width:200px;">실시간 풍속정보</div>
+                                    <div class="title" style="width:200px;">실시간 <br> 풍속정보</div>
                                 </a>
                             </li>
                             <li class="nav-item  ms-3">
@@ -113,7 +113,7 @@
                                     data-submenu="menu05"
                                     data-idx="5">
                                     <!-- <img src="images/icon22_off.png" alt="" /> -->
-                                    <div class="title">빌딩풍 위험지도</div>
+                                    <div class="title">빌딩풍 <br>위험지도</div>
                                 </a>
                             </li>
 
