--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <iframe  src="https://tv.naver.com/v/15691656?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <video  src="https://tv.naver.com/v/15691656"></video>
                 </div>
                 
                 <style>
